# arm-project

./: .gitignore  README.md
arm_config/: .setup_assistant  CMakeLists.txt  package.xml
arm_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  ros2_controllers.yaml  servo.rviz  servo_joint_limits.yaml  servo_parameters.yaml  zeroerr_arm.ros2_control.xacro  zeroerr_arm.srdf  zeroerr_arm.urdf.xacro  zeroerr_arm_servo.urdf.xacro
arm_config/launch/: demo.launch.py  hardware.launch.py  headless.launch.py  servo.launch.py  setup_assistant.launch.py  sim.launch.py
arm_description/: CMakeLists.txt  package.xml
arm_description/launch/: urdf.launch.py
arm_description/meshes/: arm_Link.STL  arm_link.STL  camera_Link.STL  j1_Link.STL  j3_Link.STL  j4_Link.STL  j5_Link.STL  j6_Link.STL
arm_description/rviz/: rviz_basic_settings.rviz
arm_description/urdf/: zeroerr.csv  zeroerr.urdf  zeroerr_cts.urdf
arm_ethercat_interface/: CMakeLists.txt  package.xml
arm_ethercat_interface/include/arm_ethercat_interface/: arm_ethercat_interface.h
arm_ethercat_interface/include/zeroerr_interface/: ec_defines.h
arm_ethercat_interface/src/: arm_ethercat_interface.cpp
arm_hardware/: CMakeLists.txt  arm_hardware.xml  package.xml
arm_hardware/include/arm_hardware/: arm_hardware.hpp
arm_hardware/launch/: test.launch.py
arm_hardware/src/: arm_hardware.cpp
arm_move_group/: CMakeLists.txt  package.xml  readme.md
arm_move_group/include/arm_move_group/: arm_move_group.h
arm_move_group/launch/: move_group.launch.py
arm_move_group/scripts/: add_robot_scene.py  remove_robot_scene.py
arm_move_group/src/: arm_move_group.cpp
arm_msgs/: CMakeLists.txt  package.xml
arm_msgs/srv/: GetState.srv  MoveToSaved.srv  PoseGoalArray.srv  Save.srv
arm_servo/: CMakeLists.txt  Control_Layout.md  package.xml
arm_servo/src/: game_controller.cpp  servo_keyboard_input.cpp
arm_tests/: package.xml  setup.cfg  setup.py
arm_tests/arm_tests/: move_group_test.py  move_to_saved.py  pose_goal_array_test.py  save_test.py
zeroerr_config/: .setup_assistant  CMakeLists.txt  package.xml
zeroerr_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  servo_parameters.yaml  stomp_planning.yaml  zeroerr_arm.ros2_control.xacro  zeroerr_arm.ros2_control_test.xacro  zeroerr_arm.srdf  zeroerr_arm.urdf.xacro  zeroerr_slave_config.yaml
zeroerr_config/launch/: demo.launch.py  hardware.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  sim.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
zeroerr_description/: CMakeLists.txt  package.xml
zeroerr_description/launch/: urdf.launch.py
zeroerr_description/meshes/: j1_Link.STL  j4_Link.STL
zeroerr_description/urdf/: zeroerr.urdf
zeroerr_hardware/: CMakeLists.txt  package.xml  zeroerr_hardware.xml
zeroerr_hardware/include/zeroerr_hardware/: arm_hardware.hpp
zeroerr_hardware/launch/: test.launch.py
zeroerr_hardware/src/: arm_hardware.cpp
zeroerr_interface/: CMakeLists.txt  package.xml
zeroerr_interface/include/zeroerr_interface/: ec_defines.h  zeroerr_interface.h
zeroerr_interface/src/: zeroerr_interface.cpp
zeroerr_move_group/: CMakeLists.txt  package.xml  readme.md
zeroerr_move_group/include/zeroerr_move_group/: zeroerr_move_group.h
zeroerr_move_group/launch/: move_group.launch.py
zeroerr_move_group/src/: zeroerr_move_group.cpp
zeroerr_msgs/: CMakeLists.txt  package.xml
zeroerr_msgs/action/: MoveToSaved.action
zeroerr_msgs/msg/: ArmJointSpace.msg  ArmPoint.msg  CollisionObject.msg  JointSpaceTarget.msg  PoseTargetArray.msg
zeroerr_msgs/srv/: JointSpaceGoal.srv  MoveToSaved.srv  PoseGoal.srv  Save.srv  SaveMotion.srv
zeroerr_servo/: CMakeLists.txt  package.xml
zeroerr_servo/src/: servo_keyboard_input.cpp
zeroerr_test/: package.xml  setup.cfg  setup.py
zeroerr_test/zeroerr_test/: move_group_test.py  move_to_saved.py  planning_scene_test.py  pose_goal_array_test.py  save_test.py
